--- a/cssNavbar.html
+++ b/cssNavbar.html
@@ -24,6 +24,7 @@
     <li><a href="####">About Us</a></li>
     <li><a href="####">Contact</a></li>
     <li><a href="####">Services</a></li>
+    <li><a href="####">Services3</a></li>
 </ul>
 
     </div>
